OpafProjectVisualForcePages/force-app/main/default/objects/Opaf_Care_Connect_Setting__mdt/fields/Facebook__c.field-meta.xml
<CustomField>
    <fullName>Facebook__c</fullName>
    <label>Facebook</label>
    <length>255</length>
    <type>Text</type>
</CustomField>