OpafProjectVisualForcePages/force-app/main/default/objects/Opaf_Care_Connect_Setting__mdt/fields/Footer_Content__c.field-meta.xml
<CustomField>
    <fullName>Footer_Content__c</fullName>
    <label>Footer Content</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>