OpafProjectVisualForcePages/force-app/main/default/objects/Opaf_Care_Connect_Setting__mdt/fields/Linkedin__c.field-meta.xml
<CustomField>
    <fullName>Linkedin__c</fullName>
    <label>Linkedin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>