OpafProjectVisualForcePages/force-app/main/default/objects/Opaf_Care_Connect_Setting__mdt/fields/MG_Abilify_Maintena__c.field-meta.xml
<CustomField>
    <fullName>MG_Abilify_Maintena__c</fullName>
    <label>MG Abilify Maintena</label>
    <length>255</length>
    <type>Text</type>
</CustomField>