OpafProjectVisualForcePages/force-app/main/default/objects/Opaf_Care_Connect_Setting__mdt/fields/MG_Jynarque__c.field-meta.xml
<CustomField>
    <fullName>MG_Jynarque__c</fullName>
    <label>MG Jynarque</label>
    <length>255</length>
    <type>Text</type>
</CustomField>