OpafProjectVisualForcePages/force-app/main/default/objects/Opaf_Care_Connect_Setting__mdt/fields/MG_Rexulti__c.field-meta.xml
<CustomField>
    <fullName>MG_Rexulti__c</fullName>
    <label>MG Rexulti</label>
    <length>255</length>
    <type>Text</type>
</CustomField>