OpafProjectVisualForcePages/force-app/main/default/objects/Opaf_Care_Connect_Setting__mdt/fields/Month_Year__c.field-meta.xml
<CustomField>
    <fullName>Month_Year__c</fullName>
    <label>Month Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>