OpafProjectVisualForcePages/force-app/main/default/objects/Opaf_Care_Connect_Setting__mdt/fields/Patient_Veeva_Code__c.field-meta.xml
<CustomField>
    <fullName>Patient_Veeva_Code__c</fullName>
    <label>Patient Veeva Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>