OpafProjectVisualForcePages/force-app/main/default/objects/Opaf_Care_Connect_Setting__mdt/fields/PI_Rexulti__c.field-meta.xml
<CustomField>
    <fullName>PI_Rexulti__c</fullName>
    <label>PI Rexulti</label>
    <length>255</length>
    <type>Text</type>
</CustomField>