OpafProjectVisualForcePages/force-app/main/default/objects/Opaf_Care_Connect_Setting__mdt/fields/PI_Samsca__c.field-meta.xml
<CustomField>
    <fullName>PI_Samsca__c</fullName>
    <label>PI_Samsca</label>
    <length>255</length>
    <type>Text</type>
</CustomField>