OpafProjectVisualForcePages/force-app/main/default/objects/Opaf_Care_Connect_Setting__mdt/fields/Prescriber_Month_Year__c.field-meta.xml
<CustomField>
    <fullName>Prescriber_Month_Year__c</fullName>
    <label>Prescriber Month Year</label>
    <length>30</length>
    <type>Text</type>
</CustomField>