OpafProjectVisualForcePages/force-app/main/default/objects/Opaf_Care_Connect_Setting__mdt/fields/Prescriber_Veeva_Code__c.field-meta.xml
<CustomField>
    <fullName>Prescriber_Veeva_Code__c</fullName>
    <label>Prescriber Veeva Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>