OpafProjectVisualForcePages/force-app/main/default/objects/Opaf_Care_Connect_Setting__mdt/fields/Privacy_Policy__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Policy__c</fullName>
    <label>Privacy Policy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>