OpafProjectVisualForcePages/force-app/main/default/objects/Opaf_Care_Connect_Setting__mdt/fields/SAR_Otsuka__c.field-meta.xml
<CustomField>
    <fullName>SAR_Otsuka__c</fullName>
    <label>SAR_Otsuka</label>
    <length>255</length>
    <type>Text</type>
</CustomField>