OpafProjectVisualForcePages/force-app/main/default/objects/Opaf_Care_Connect_Setting__mdt/fields/Term_of_Use__c.field-meta.xml
<CustomField>
    <fullName>Term_of_Use__c</fullName>
    <label>Term of Use</label>
    <length>255</length>
    <type>Text</type>
</CustomField>